--- a/slide.tex
+++ b/slide.tex
@@ -156,6 +156,17 @@ breaklinks=true
 ~~~~~~但Gossip并不是一个新东西，之前的泛洪查找、路由算法都归属于这个范畴，不同的是Gossip给这类算法提供了明确的语义、具体实施方法及收敛性证明。
 \end{frame}
 %%%%%%%%%% Slide End %%%%%%%%%%
+
+
+%%%%%%%%%% One Slide %%%%%%%%%%
+\subsection{\hfill Gossip算法的发展历史}
+\begin{frame}
+\frametitle{Gossip算法的发展历史}
+ 
+\end{frame}
+%%%%%%%%%% Slide End %%%%%%%%%%
+
+
 \section{算法描述}
 
 %%%%%%%%%% One Slide %%%%%%%%%%
@@ -226,9 +237,9 @@ breaklinks=true
  ~~~~~~如果把两个节点数据同步一次定义为一个周期，则在一个周期内，push需通信1次，pull需2次，push/pull则需3次，从效果上来讲，push/pull最好，理论上一个周期内可以使两个节点完全一致。直观上也感觉，push/pull的收敛速度是最快的。
 
 ~~~~~~假设每个节点通信周期都能选择（感染）一个新节点，则Gossip算法退化为一个二分查找过程，每个周期构成一个平衡二叉树，收敛速度为$O(n^2)$，对应的时间开销则为$O(\log n)$。这也是Gossip理论上最优的收敛速度。但在实际情况中最优收敛速度是很难达到的，假设某个节点在第i个周期被感染的概率为$p_i$ ,第$i+1$个周期被感染的概率为$p_{i+1}$ ，则pull的方式:
-~~~~$ p_{i+1} =p_i^2$
+~~~~~~~~~~~~~~~~$ p_{i+1} =p_i^2$
 
-而push为：~~~~
+而push为：~~~~~~~~~~~~
 $p_{i+1}=p_i(1-\frac{1}{n})^{n(1-p_i)}$
 \end{frame}
 %%%%%%%%%% Slide End %%%%%%%%%%
