--- a/slide.tex
+++ b/slide.tex
@@ -159,9 +159,21 @@ breaklinks=true
 
 
 %%%%%%%%%% One Slide %%%%%%%%%%
-\subsection{\hfill Gossip算法的发展历史}
+\subsection{\hfill 算法的发展历史}
 \begin{frame}
-\frametitle{Gossip算法的发展历史}
+\frametitle{算法的发展历史}
+~~~~~~1972年Hajnal等人首次给出了Gossip问题（电话问题）的描述：有n个妇女，每个人都知道一条特有的流言，她们通过电话互相联系；任意两个妇女联系上以后，互相交流当前自己知道的所有流言；最少需要多少次联系，使得n个妇女每个人都知道所有流言？这使得对流言问题的研究正式登上历史舞台。
+ 
+~~~~~~1972年Galton-Watson处理（简单分支处理）模型的出现，使得对Gossip的研究有了坚实的理论工具；在简单分支处理模型基础上，1975年Bailey对Gossip进行了更加详尽深入的理论分析；后来马尔科夫链成为Gossip算法分析的重要工具。总之Gossip算法的研究和分析有着丰富的理论工具：概率、分支处理、马尔科夫链等。
+\end{frame}
+%%%%%%%%%% Slide End %%%%%%%%%%
+
+%%%%%%%%%% One Slide %%%%%%%%%%
+%\subsection{\hfill 算法发展历史}
+\begin{frame}
+\frametitle{算法的发展历史}
+ 
+~~~~~~1988年Hedetniem等人对计算机网络环境下的Gossip问题进行了精确的定义：A是由网络中所有节点组成的集合，每个节点都有自己特有的信息，并需将其传播到网络中其它所有节点；用有序的节点对$(i,j)i,j\in A$序列表示信息的传播过程，每个节点对表示两者之间存在信息交换；当序列最后一个节点对完成交互后，所有节点都知道所有信息，称为Gossip过程结束？需要多少次信息交换Gossip过程能够结束，需要多长时间？这是Gossip研究的核心内容。
  
 \end{frame}
 %%%%%%%%%% Slide End %%%%%%%%%%
